--- a/src/containers/Main/Fan/Main.module.scss
+++ b/src/containers/Main/Fan/Main.module.scss
@@ -1,6 +1,7 @@
 .Main {
     display: flex;
     width: 100%;
+    min-height: 100vh;
 
     @media only screen and (max-width: 768px) {
         flex-direction: column;
